--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           <div class="mid-form">
             <div class="input-flex">
               <label for="email">EMAIL</label>
-              <input type="text" id="email" placeholder="email@timecapsuleny.io" pattern="^([\w\.-_]+)@([\w-]+)\.([a-zA-Z]{2,5})([\.][a-zA-Z]{2,5})?$" required>
+              <input type="text" id="email" placeholder="email@timecapsuleny.io" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" required>
             </div>
 
             <div class="input-flex">
               <label for="tel">PHONE NUMBER</label>
-              <input type="tel" id="tel" placeholder="212-555-5555" pattern="^([\d]{3})[\-]?([\d]{3})[\-]?([\d]{4})$" required>
+              <input type="tel" id="tel" placeholder="212-555-5555" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" required>
             </div>
           </div>
 
