clean code a bit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="container-left">
       <div class="title-container">
-        <img src="imgs/portalGun.png" alt="The Odin Project">
+        <img src="imgs/portalGun.png" alt="Portal Gun">
         <h1>Morty Fund</h1>
       </div>
       <p>
