change anchor href's to portfolio link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Morty Fund</h1>
       </div>
       <p>
-        Photo from <a href="https://thinkable-sincere-passenger.glitch.me/" target="_blank" rel="noopener noreferrer">Deez</a> by <a href="https://github.com/JohnKeysCloud" target="_blank" rel="noopener noreferrer">Nuts</a>
+        Photo from <a href="https://johnkeyscloud.github.io/jkc/" target="_blank" rel="noopener noreferrer">Deez</a> by <a href="https://github.com/JohnKeysCloud" target="_blank" rel="noopener noreferrer">Nuts</a>
       </p>
     </div>
 
@@ -79,7 +79,7 @@
         </div>
         <p>
           Already have an account?
-          <a href="https://thinkable-sincere-passenger.glitch.me/" target="_blank" rel="noopener noreferrer">Log in</a> 
+          <a href="https://johnkeyscloud.github.io/jkc/" target="_blank" rel="noopener noreferrer">Log in</a> 
         </p>
       </div>
     </div>
